<?xml version="1.0"?>
<package>
  <name>ymg_global_planner_hybrid</name>
  <version>0.0.0</version>
  <description>The ymg_global_planner_hybrid package</description>

  <maintainer email="strymj@todo.todo">strymj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>ymg_global_planner</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>ymg_global_planner</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <export>
		<nav_core plugin="${prefix}/ymggp_hyb_plugin.xml" />
  </export>
</package>
